syntax = "proto3";

package test;

message TestContext {
    string session_id = 1;
    string user_id = 2;
}

service TestContextService {
    rpc GetContext(TestContext) returns (TestContext);
}
